# Rustb

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  docs-header.html  print.py  token
.cargo/: config.toml
benches/: baseline_2026-04-26.txt  bench_main.rs
crate/Rustb_basis/: Cargo.toml
crate/Rustb_basis/src/: lib.rs
crate/Rustb_conductivity/: Cargo.toml
crate/Rustb_conductivity/src/: lib.rs
examples/: .bismuthene.rs.swp  bismuthene.rs
examples/BHZ/: main.rs
examples/Bi2F2/: main.rs
examples/Bi2F2/normal/bar_xy/super_band/: KLABELS
examples/Bi2F2/special/xy/: do.sh
examples/Bi2F2/special/xy/wannier/: show_new.py
examples/Bi2F2/xy/: show_chern.py
examples/Bi2F2_new/: main.rs
examples/Bi2F2_new/bar_xy/atom_2/: show_new.py
examples/Bi2F2_new/bar_xy_new/atom_1/: show_new.py
examples/Bi2F2_new/bar_xy_new/atom_2/: show_new.py
examples/Bi2F2_new/bar_xy_new/band/: print.py
examples/Bi2F2_new/t3/bar_xy/: show_new.py
examples/Bi2F2_new/xy_new/: show_new.py
examples/Bi2F2_new/xy_new/atom_1/: show_new.py
examples/Bi2F2_new/xy_new/atom_2/: show_new.py
examples/Bi2F2_new/xy_new/band/: KLABELS
examples/Bi2F2_new/z_new/atom_1/: show_new.py
examples/BiF_square/: main.rs
examples/BiF_square/alter/: KLABELS
examples/BiF_square/band/: KLABELS
examples/BiF_square/corner/: show_new.py
examples/BiF_square/super_band/: KLABELS
examples/Intrinsic_nonlinear/: Cargo.toml  main.rs
examples/Intrinsic_nonlinear/src/: main.rs
examples/RuO2/: '  KLABELS  main.rs
examples/WTe2_kp/: Cargo.toml  main.rs
examples/WTe2_kp/src/: main.rs
examples/alter_twist/: .main.rs.swp  KLABELS  main.rs
examples/alterhexagonal/: KLABELS  main.rs
examples/alterhexagonal/edge_band/: KLABELS  show.py
examples/altermagnetic/: Cargo.toml
examples/altermagnetic/src/: main.rs
examples/bismuthene/: Cargo.toml  KLABELS
examples/bismuthene/src/: main.rs
examples/chern_alter/: KLABELS  main.rs
examples/graphene/: KLABELS  main.rs
examples/strain_graphene/: Cargo.toml
examples/strain_graphene/src/: main.rs
examples/yuxuan_try/: main.rs
examples/z2_AF/: Cargo.toml  KLABELS  main.rs
examples/z2_AF/src/: main.rs
examples/z2_monopole/: main.rs
katex/: docs-header.html
src/: .lib.rs.swp  .model_physics.rs.swp  SKmodel.rs  atom.rs  atom_struct.rs  basis.rs  conductivity.rs  cut.rs  error.rs  fermi_surface.rs  generics.rs  geometry.rs  io.rs  kpath.rs  kplane.rs  kpoints.rs  lib.rs  magnetic_field.rs  math.rs  model.rs  model_build.rs  model_enums.rs  model_physics.rs  model_struct.rs  model_transform.rs  model_utils.rs  ndarray_lapack.rs  optical_conductivity.rs  orbital_angular.rs  output.rs  phy_const.rs  quantum_geometry.rs  solve_ham.rs  sparse_model.rs  surfgreen.rs  symm.rs  tmrtool.rs  unfold.rs  utils.rs  velocity.rs  (+1 more)
test/unfold_test/: KLABELS
tests/BBH/: KLABELS  dos.surf_bulk  dos.surf_r
tests/BBH/corner/: band.txt  structure.txt
tests/Enonlinear/: KLABELS
tests/Haldan/surf/: dos.surf_bulk  dos.surf_l  dos.surf_r
tests/SSH/: KLABELS
tests/graphene_zig/: KLABELS
tests/kagome/: KLABELS
tests/kagome_zig/: dos.surf_bulk  dos.surf_l  dos.surf_r
tests/kane/: KLABELS  dos.surf_bulk  dos.surf_l  show.py  surfdos_xy.gnu
tests/kane/magnetic/: band.txt  dos.surf_bulk  dos.surf_r  structure.txt
tests/kane_super/: KLABELS
tests/unfold_test/: KLABELS
