[package]
name = "Rustb"
version = "0.1.8"
edition = "2021"

categories = ["Tight bind calculation","wannier function"]
description = "A package for calculating band, angle state, linear and nonlinear conductivities based on tight-binding models"
exclude = ["target/", "examples/", ".github/", "crate/","tests/"]
homepage = "https://bevyengine.org"
keywords = ["tight-binding", "wannier-function", "physics","Rustb"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LiuyichenYanwushang/Rustb"
rust-version = "1.73.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
opt_level=3
debug=true


[dependencies]
ndarray={ version="0.15.6", features = ["rayon","blas","matrixmultiply-threading"] }
num-complex="0.4.4"
ndarray-linalg={version="0.16.0",default-features=false}
rayon="1.8.0"
gnuplot="0.0.39"

[features]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]

[[example]]
name = "WTe2_kp"
path = "examples/WTe2_kp/main.rs"

[[example]]
name = "Intrinsic_nonlinear"
path = "examples/Intrinsic_nonlinear/main.rs"

[[example]]
name = "z2_monopole"
path = "examples/z2_monopole/main.rs"

[[example]]
name = "graphene"
path="examples/graphene/main.rs"

[[example]]
name = "BiF_square"
path="examples/BiF_square/main.rs"

[[example]]
name = "yuxuan_try"
path="examples/yuxuan_try/main.rs"

[[example]]
name = "RuO2"
path="examples/RuO2/main.rs"

[[example]]
name = "alterhexagonal"
path="examples/alterhexagonal/main.rs"

[[example]]
name = "chern_alter"
path="examples/chern_alter/main.rs"

[[example]]
name = "alter_twist"
path="examples/alter_twist/main.rs"
