[package]
name = "Rustb"
version = "0.2.3"
edition = "2021"

categories = ["science"]
description = "A package for calculating band, angle state, linear and nonlinear conductivities based on tight-binding models"
exclude = ["target/", "examples/", ".github/", "crate/","tests/"]
keywords = ["tight-binding","physics","Rustb"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LiuyichenYanwushang/Rustb"
rust-version = "1.77.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
opt_level=3
panic = 'abort'


[dependencies]
ndarray={ version = "0.15.6", features = ["matrixmultiply-threading", "rayon"] }
num-complex="0.4.4"
ndarray-linalg={version="0.16.0",default-features=false}
rayon="1.8.0"
gnuplot="0.0.39"
lapack = "0.19.0"
num-traits = "0.2.17"
cblas-sys = "0.1.4"
blas = "0.22.0"


[dependencies.intel-mkl-src]
version = "0.8.1"
default-features = false
optional = true

[dependencies.netlib-src]
version = "0.8.0"
optional = true
features = ["cblas"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]

[[package.metadata.docs.rs.artifacts]]
src = "doc/dos_2D.svg"
dst = "dos_2D.svg"

[features]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static","intel-mkl-src/mkl-static-lp64-seq"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system","intel-mkl-src/mkl-dynamic-lp64-seq"]

[[example]]
name = "WTe2_kp"
path = "examples/WTe2_kp/main.rs"

[[example]]
name = "Intrinsic_nonlinear"
path = "examples/Intrinsic_nonlinear/main.rs"

[[example]]
name = "z2_monopole"
path = "examples/z2_monopole/main.rs"

[[example]]
name = "graphene"
path="examples/graphene/main.rs"

[[example]]
name = "BiF_square"
path="examples/BiF_square/main.rs"

[[example]]
name = "Bi2F2"
path="examples/Bi2F2/main.rs"

[[example]]
name = "Bi2F2_new"
path="examples/Bi2F2_new/main.rs"

[[example]]
name = "yuxuan_try"
path="examples/yuxuan_try/main.rs"

[[example]]
name = "RuO2"
path="examples/RuO2/main.rs"

[[example]]
name = "alterhexagonal"
path="examples/alterhexagonal/main.rs"

[[example]]
name = "chern_alter"
path="examples/chern_alter/main.rs"

[[example]]
name = "alter_twist"
path="examples/alter_twist/main.rs"
