[package]
name = "WTe2_kp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num="*"
ndarray={ version="*", features = ["rayon"] }
nalgebra="*"
num-complex="*"
ndarray-linalg={version="*",features=["intel-mkl"]}
gnuplot="*"
rayon="*"
partial_application="*"
Rustb={path="../../"}
